# calcyx

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES.txt
cli/: CMakeLists.txt  calcyx.rc  main.c  main.cpp
cli/testdata/: basic.txt  run_golden.cmake
cli/testdata/args/: check_config_clean.args  check_config_warnings.args  comment.args  error_exit.args  eval_basic.args  eval_both.args  file_mode.args  multi_e.args  print_config_default.args
cli/testdata/conf/: with_warnings.conf
cli/testdata/expected/: check_config_clean.out  check_config_warnings.err  error_exit.err  eval_both.out  file_mode.out  print_config_default.out
cmake/: deps-emscripten.cmake  deps-mingw64.cmake  deps.cmake  patch-fltk.py  test_runners.cmake  toolchain-emscripten.cmake  toolchain-mingw64.cmake  toolchain-win.cmake
docs/: benchmarks.md
engine/: CMakeLists.txt  calcyx_wasm.c  test_eval.c  test_parser.c  test_types.c  utf8.c  utf8.h
engine/eval/: builtin.c  builtin.h  builtin_array.c  builtin_array_bits.c  builtin_array_color.c  builtin_array_encode.c  builtin_array_internal.h  builtin_array_ops.c  builtin_array_stats.c  builtin_array_string.c  eval.c  eval.h  eval_ctx.c  eval_ctx.h
engine/parser/: expr.h  lexer.c  lexer.h  parser.c  parser.h  token.h
engine/types/: frac.c  frac.h  quad.c  quad.h  real.c  real.h  ufixed113.c  ufixed113.h  val.c  val.h
gui/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  CompletionPopup.cpp  CompletionPopup.h  Info.plist.in  MainWindow.cpp  MainWindow.h  PasteOptionForm.cpp  PasteOptionForm.h  PrefsDialog.cpp  PrefsDialog.h  SheetLineInput.cpp  SheetLineInput.h  SheetView.cpp  app_prefs.cpp  app_prefs.h  calcyx.manifest  colors.cpp  colors.h  com.ponzu840w.calcyx.desktop  crash_handler.cpp  crash_handler.h  main.cpp  platform_mac.mm  platform_tray.h  platform_tray_win.cpp  platform_tray_x11.cpp  settings_globals.cpp  settings_globals.h  sheet_highlight.cpp  sheet_highlight.h  test_completion.cpp  test_settings.cpp
gui/prefs/: prefs_common.cpp  prefs_common.h  tab_appearance.cpp  tab_calculation.cpp  tab_general.cpp  tab_input.cpp  tab_number_format.cpp
kekka/: font-diag1.txt  font-trace1.txt
samples/: Test_Array_Extra.txt  Test_Color.txt  Test_Encoding.txt  Test_Encoding_Extra.txt  Test_String.txt  Test_String_Extra.txt
scripts/: bench-compare.sh  bench.sh  bench_win.ps1
shared/: builtin_docs.c  builtin_docs.h  color_presets.c  color_presets.h  completion_filter.hpp  completion_match.c  completion_match.h  i18n.c  i18n.h  i18n_locale.c  i18n_table.c  path_utf8.c  path_utf8.h  settings_io.c  settings_io.h  settings_schema.c  settings_schema.h  settings_writer.c  settings_writer.h  sheet_model.c  sheet_model.h  sheet_text.hpp  test_settings_writer.c  test_sheet_model.c
tui/: CMakeLists.txt  PrefsScreen.cpp  PrefsScreen.h  SemanticColors.cpp  SemanticColors.h  TuiApp.cpp  TuiApp.h  TuiCompletion.cpp  TuiCompletion.h  TuiSheet.cpp  TuiSheet.h  clipboard.cpp  clipboard.h  ftxui_calcyx_input.patch  ftxui_passthrough_ctrl.patch  keymap.cpp  keymap.h  main.cpp  test_tui_app.cpp  test_tui_sheet.cpp
ui/: CMakeLists.txt  CompletionPopup.cpp  CompletionPopup.h  MainWindow.cpp  MainWindow.h  PasteOptionForm.cpp  PasteOptionForm.h  PrefsDialog.cpp  PrefsDialog.h  SheetView.cpp  SheetView.h  app_prefs.cpp  app_prefs.h  builtin_docs.cpp  builtin_docs.h  calcyx.rc  colors.cpp  colors.h  com.ponzu840w.calcyx.desktop  completion_match.cpp  completion_match.h  crash_handler.cpp  icon.icns  main.cpp  platform_mac.mm  platform_tray.h  platform_tray_common.cpp  platform_tray_mac.mm  platform_tray_stub.cpp  platform_tray_win.cpp  platform_tray_x11.cpp  settings_globals.cpp  settings_globals.h  test_undo.cpp
ui/prefs/: prefs_common.cpp  prefs_common.h  tab_appearance.cpp  tab_general.cpp  tab_input.cpp  tab_number_format.cpp  tab_system.cpp
web/: CMakeLists.txt  gen_manifest.cmake  inject_cache_bust.cmake
web/static/: app.js  calcyx.css  colors.js  highlight.js  index.html  paste-dialog.js  version.js.in
